--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".ViewModelTestActivity"
+            android:name=".ViewModelTest.ViewModelTestActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
